welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if(vacation=true){
                   ^sleepIn:4: error: not found: value sleepln
	sleepln==false
        ^sleepIn:8: error: reassignment to val
	if (weekday=true){
                   ^sleepIn:9: error: not found: value sleepln
		sleepln==false
                ^sleepIn:11: error: not found: value sleepln
		sleepln==true
                ^